[gd_scene load_steps=10 format=2]

[ext_resource path="res://engine/scenes/ui/button_selection_prompt/ButtonSelectionPrompt.gd" type="Script" id=1]
[ext_resource path="res://engine/fonts/Pixeled.tres" type="DynamicFont" id=2]
[ext_resource path="res://engine/fonts/Pixel-Life.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://engine/sprites/ui/button_prompt/joypad_icons/ps4/0.png" type="Texture" id=4]
[ext_resource path="res://engine/scenes/ui/button_prompt/ButtonPrompt.tscn" type="PackedScene" id=5]
[ext_resource path="res://engine/classes/ScaleContainer.gd" type="Script" id=6]
[ext_resource path="res://engine/scenes/ui/button_icon/ButtonIcon.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[node name="ButtonSelectionPrompt" type="ColorRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.941176 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScaleContainer" type="Container" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -478.0
margin_top = -158.0
margin_right = 478.0
margin_bottom = 158.0
rect_min_size = Vector2( 956, 316 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
child_to_scale_with = NodePath("VBoxContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="ScaleContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -478.0
margin_top = -158.0
rect_scale = Vector2( 2, 2 )
custom_constants/separation = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="ScaleContainer/VBoxContainer"]
margin_right = 478.0
margin_bottom = 30.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
text = "Assign a joystick to action: Visor control"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HSplitContainer" parent="ScaleContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 478.0
margin_bottom = 55.0
size_flags_horizontal = 3
dragger_visibility = 1

[node name="Accept" parent="ScaleContainer/VBoxContainer/Buttons" instance=ExtResource( 5 )]
margin_right = 371.0
size_flags_horizontal = 3
preview_text = "Accept"
default_text = "buttongetter_button_accept"
default_action_key = "ui_accept"

[node name="Blacklist" parent="ScaleContainer/VBoxContainer/Buttons" instance=ExtResource( 5 )]
margin_left = 383.0
margin_right = 478.0
size_flags_horizontal = 9
preview_text = "Blacklist axis"
preview_texture = ExtResource( 4 )
default_text = "buttongetter_button_blacklist_button"
default_action_key = "ui_cancel"

[node name="Tween" type="Tween" parent="ScaleContainer/VBoxContainer/Buttons"]

[node name="DetectionLabel" type="Label" parent="ScaleContainer/VBoxContainer"]
margin_left = 138.0
margin_top = 64.0
margin_right = 340.0
margin_bottom = 94.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "Detected button: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScaleContainer" type="Container" parent="ScaleContainer/VBoxContainer/DetectionLabel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -4.21906
margin_top = -16.0
margin_right = 27.7809
margin_bottom = 16.0
rect_min_size = Vector2( 32, 32 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
child_to_scale_with = NodePath("ButtonIcon")

[node name="ButtonIcon" parent="ScaleContainer/VBoxContainer/DetectionLabel/ScaleContainer" instance=ExtResource( 7 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -16.0
margin_right = -16.0
margin_bottom = 0.0
rect_scale = Vector2( 2, 2 )

[node name="TimeLabel" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.333333 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -558.0
margin_top = -126.919
margin_right = 558.0
margin_bottom = -35.9187
custom_fonts/font = ExtResource( 2 )
text = "4"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeoutTimer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[connection signal="just_pressed" from="ScaleContainer/VBoxContainer/Buttons/Accept" to="." method="_on_Accept_just_pressed"]
[connection signal="just_pressed" from="ScaleContainer/VBoxContainer/Buttons/Blacklist" to="." method="_on_Blacklist_just_pressed"]
[connection signal="timeout" from="TimeoutTimer" to="." method="_on_TimeoutTimer_timeout"]
